# ai-epic-background

./: .gitignore  .gitmodules  README.md  pyproject.toml
.claude/skills/update-data-md/: SKILL.md
.github/workflows/: documentation.yml
analyses/: README.md
analyses/csv_particle_analyses/: csv_particle_analyses.py
analyses/time-vs-z-plots/: README.md
csv_convert/: CMakeLists.txt  mc_particles.cxx  reco_particles.cxx  trk_hits.cxx
docs/: ai-datasets.md  background.md  csv-convert-running.md  csv-convert-snakemake.md  csv-convert.md  data-format.md  data.md  full-sim-pipeline-campaigns.md  full-sim-pipeline-jobs.md  full-sim-pipeline.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: Layout.vue  custom.css  index.ts
docs/.vitepress/theme/components/: DidStrips.README.md  DidStrips.vue  DidTable.vue  HistogramViewer.vue  JsonHistogram.vue  PlotCompareViewer.vue  README.md  VerticalComparePlot.vue
docs/campaign_2026-04/: index.md
full-sim-pipeline/: 01_root_hepmc_klam_convert.py  02_root_hepmc_pin_convert.py  10_create_afterburner_jobs.py  20_create_npsim_jobs.py  21_create_npsim_saveall_jobs.py  30_create_eicrecon_jobs.py  40_create_csv_dd4hep_jobs.py  41_create_csv_eicrecon_jobs.py  42_create_datasets_list.py  43_create_files_csv_reco_jobs.py  50_create_analysis_jobs.py  51_create_root_analysis_jobs.py  campaign-26-05-data-26-05.yaml  collect_job_stats.py  config-campaign-25-10.yaml  config-campaign-26-03.yaml  config-campaign-26-04.yaml  config-campaign-26-05.yaml  config-campaign-official_2026-02.yaml  dis-data-26-06.yaml  eg_analysis.sh  eg_split.slurm.sh  job_creator.py
scripts/: check_podio_files.py  merge_reco_particles_to_feather.py  podio_metadata.py  summarize_rucio_dids.py  update_data_md.py
