[project]
name = "ai-epic-background"
version = "0.1.0"
description = "EPIC experiment curated datasets with background"
requires-python = ">=3.12"
dependencies = [
    "notebook",
    "pandas-stubs",
    "uproot",
    "uproot-browser",
    "boost-histogram",
    "hist[plot]",
    "matplotlib",
    "json_fix",
    "scipy",
    "numpy",
    "awkward",
    "mplhep",
    "sh",
    "rich",
    "vector",
    "pandas",
    "pyyaml",
    'omegaconf',
    "keras>=3.0",
    "jax[cpu]",
    "scikit-learn",
    "duckdb",
    "typer",
    "submitit"
]
